# slmp

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
example/: CMakeLists.txt  example.c
example/cpp/: CMakeLists.txt  main.cpp
include/: slmp.h
src/: lib.rs  slmp.c  slmp.h  slmp_core.rs
