cmake_minimum_required(VERSION 3.10)

project(slmp C)

set(CMAKE_C_STANDARD 11)

#message(STATUS "PROJECT_SOURCE_DIR = ${PROJECT_SOURCE_DIR}")
#message(STATUS "PROJECT_BINARY_DIR = ${PROJECT_BINARY_DIR}")
#message(STATUS "CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")

#设置可执行文件输出目录
set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_BINARY_DIR}/bin)
message(STATUS "EXECUTABLE_OUTPUT_PATH = ${EXECUTABLE_OUTPUT_PATH}")

#设置库文件输出目录
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
message(STATUS "LIBRARY_OUTPUT_PATH = ${LIBRARY_OUTPUT_PATH}")

message(STATUS "PROJECT_SOURCE_DIR = ${PROJECT_SOURCE_DIR}")

#add_subdirectory(src)
add_subdirectory(example)

