[package]
name = "slmp"
version = "0.4.1"
authors = ["sanri <engineer_tang@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "slmp"
crate-type = ["rlib"]

[dependencies]
async-std = { version = "1.9", features = [ "std" ] }